--- a/src/assets/styles/icon.css
+++ b/src/assets/styles/icon.css
@@ -8,12 +8,10 @@
 }
 
 .iconfont {
-  font-family:"iconfont" !important;
-  font-size:16px;
+  font-family:"iconfont";
+  font-size: 20px;
+  line-height: 20px;
   font-style:normal;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale;
 }
 .icon-refresh:before { content: "\E636"; }
 .icon-qrcode:before { content: "\E63B"; }
